--- a/lib/lv_demo_web/live/post_live/show.html.leex
+++ b/lib/lv_demo_web/live/post_live/show.html.leex
@@ -25,6 +25,10 @@
     <strong>Desc:</strong>
     <%= @post.desc %>
   </li>
+  <li>
+    <strong>Body:</strong>
+    <%= @post.body %>
+  </li>
 
   <li>
     <strong>Is published:</strong>
