--- a/lib/lv_demo_web/live/blog_live/show.html.leex
+++ b/lib/lv_demo_web/live/blog_live/show.html.leex
@@ -1,5 +1,11 @@
 <h1>Show Blog</h1>
 
+<span><%= live_patch "New Post", to: Routes.post_index_path(@socket, :new, params: @blog.id) %></span>
+
+<span><%= live_patch "Edit", to: Routes.blog_show_path(@socket, :edit, @blog), class: "button" %></span>
+<span><%= live_redirect "Back", to: Routes.blog_index_path(@socket, :index) %></span>
+
+
 <%= if @live_action in [:edit] do %>
   <%= live_modal @socket, LvDemoWeb.BlogLive.FormComponent,
     id: @blog.id,
@@ -44,6 +50,3 @@
     <article><%= post.desc %></article>
   </div>
 <% end %>
-
-<span><%= live_patch "Edit", to: Routes.blog_show_path(@socket, :edit, @blog), class: "button" %></span>
-<span><%= live_redirect "Back", to: Routes.blog_index_path(@socket, :index) %></span>
