--- a/lib/lv_demo_web/live/post_live/form_component.html.leex
+++ b/lib/lv_demo_web/live/post_live/form_component.html.leex
@@ -6,9 +6,13 @@
   phx_change: "validate",
   phx_submit: "save" %>
 
+  <%= hidden_input f, :blog_id %>
+
   <%= label f, :title %>
   <%= text_input f, :title %>
   <%= error_tag f, :title %>
+
+
 
   <%= label f, :slug %>
   <%= text_input f, :slug %>
