--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -19,9 +19,22 @@
   pointer-events: none;
 }
 
-.phx-modal {
+.phx-modalx {
   opacity: 1!important;
   position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.phx-modal {
+  opacity: 1!important;
+  // position: fixed;
   z-index: 1;
   left: 0;
   top: 0;
@@ -37,7 +50,7 @@
   margin: 15% auto;
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
+  // width: 80%;
 }
 
 .phx-modal-close {
