--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,6 +1,8 @@
 /* This file is for your main application css. */
 @import "./phoenix.css";
 
+@import "./site.css";
+
 /* LiveView specific classes for your customizations */
 .phx-no-feedback.invalid-feedback,
 .phx-no-feedback .invalid-feedback {
