--- a/lib/lv_demo_web/templates/layout/root.html.leex
+++ b/lib/lv_demo_web/templates/layout/root.html.leex
@@ -24,7 +24,13 @@
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
+      
     </header>
+    <nav>
+      <a href="/blogs">Blogs</a>
+      <a href="/tags">Tags</a>
+    </nav>
+
     <%= @inner_content %>
   </body>
 </html>
