post_view.ex: tag_input, many to may on_replace: post->tags, routes

--- a/lib/lv_demo_web/live/blog_live/show.html.leex
+++ b/lib/lv_demo_web/live/blog_live/show.html.leex
@@ -1,8 +1,7 @@
 <h1>Show Blog</h1>
 
-<span><%= live_patch "New Postx", to: Routes.blog_show_path(@socket, :new_post, @blog) %></span>
+<span><%= live_patch "New Post", to: Routes.blog_show_path(@socket, :new_post, @blog) %></span>
 
-<span><%= live_patch "New Post", to: Routes.post_index_path(@socket, :new, blog_id: @blog.id) %></span>
 <span><%= live_patch "Edit", to: Routes.blog_show_path(@socket, :edit, @blog), class: "button" %></span>
 <span><%= live_redirect "Back", to: Routes.blog_index_path(@socket, :index) %></span>
 
@@ -16,6 +15,16 @@
     post: @post,
     return_to: Routes.blog_show_path(@socket, :show, @blog) %>
 <% end %>
+
+<%= if @live_action in [:edit_post] do %>
+  <%= live_modal @socket, LvDemoWeb.PostLive.FormComponent,
+    id: @post.id,
+    title: @page_title,
+    action: @live_action,
+    post: @post,
+    return_to: Routes.blog_show_path(@socket, :show, @blog) %>
+<% end %>
+
 
 <%= if @live_action in [:edit] do %>
   <%= live_modal @socket, LvDemoWeb.BlogLive.FormComponent,
@@ -66,4 +75,6 @@
       <% end %>
       </div>
   </div>
+  <span><%= live_patch "Edit", to: Routes.blog_show_path(@socket, :edit_post, @blog, post) %></span>
+  
 <% end %>
