--- a/lib/lv_demo_web/live/post_live/form_component.html.leex
+++ b/lib/lv_demo_web/live/post_live/form_component.html.leex
@@ -12,8 +12,6 @@
   <%= text_input f, :title %>
   <%= error_tag f, :title %>
 
-
-
   <%= label f, :slug %>
   <%= text_input f, :slug %>
   <%= error_tag f, :slug %>
@@ -27,7 +25,7 @@
   <%= error_tag f, :body %>
 
   <%= label f, :tags %>
-  <%= text_input f, :tags %>
+  <%= tag_input f, :tags %>
 
 
   <%= label f, :is_published %>
