CSS changes for blog menu

--- a/lib/lv_demo_web/templates/layout/root.html.leex
+++ b/lib/lv_demo_web/templates/layout/root.html.leex
@@ -24,10 +24,10 @@
           <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
         </a>
       </section>
-      
+
     </header>
-    <nav>
-      <a href="/blogs">Blogs</a>
+    <nav style="display:flex;justify-content:center">
+      <a href="/blogs">Blogs</a> |
       <a href="/tags">Tags</a>
     </nav>
 
