Load comments separately, so that new comments can be immediately displayed on screen without reloading

--- a/lib/lv_demo_web/live/blog_live/read.html.leex
+++ b/lib/lv_demo_web/live/blog_live/read.html.leex
@@ -34,7 +34,7 @@
 
 <div>
   <h4>All conversations</h4>
-  <%= for comment <- @post.comments do %>
+  <%= for comment <- @comments do %>
     <div>
       <%= comment.body  %>
       <h4>by <%= comment.email %> </h4>
